--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 				<img src="img/download.svg" height="20" /><span>Download</span>
 			</button>
 		</a>
+		<p class="button-label">Letztes Update: 14.07.2020, 12:21</p>
 		
-		<hr />
+		<hr class="large" />
 		
 		<h2>Installation</h2>
 		<div class="instructions">
@@ -56,13 +57,13 @@
 			<div>
 				<div>6</div>
 				<div>
-					Suche den <b>Ordner</b> von <span class="brand"><span>W</span><span>adget</span></span> auf Deinem PC und wähle ihn aus.
+					Wähle den <b>Ordner</b> von <span class="brand"><span>W</span><span>adget</span></span> aus.
 				</div>
 			</div>
 			<div>
 				<div>7</div>
 				<div>
-					<b>Fertig</b> — <span class="brand"><span>W</span><span>adget</span></span> sollte nun rechts oben neben der URL-Leiste erscheinen.
+					<b>Fertig</b> — Das Helferlein sollte nun rechts oben neben der URL-Leiste erscheinen.
 				</div>
 			</div>
 			<div>
@@ -73,7 +74,7 @@
 			</div>
 		</div>
 		
-		<hr />
+		<hr class="large" />
 		
 		<h2>Anwendung</h2>
 		<div class="instructions">
@@ -86,7 +87,7 @@
 			<div>
 				<div>2</div>
 				<div>
-					Klicke oben rechts einfach auf das <b><span class="brand"><span>W</span></span></b> — <span class="brand"><span>W</span><span>adget</span></span> wird vollautomatisch den Artikel bzw. das Buch für Dich zitieren. Beachte, dass Du den Beispielsatz nachträglich noch manuell ergänzen musst und gegebenenfalls auch die Seitennummer, wenn Du aus <i>Google Books</i> zitierst.
+					Klicke oben rechts einfach auf das <b><span class="brand"><span>W</span></span></b> — das Helferlein wird vollautomatisch den Artikel bzw. das Buch für Dich zitieren. Beachte, dass Du den Beispielsatz nachträglich noch manuell ergänzen musst, wenn Du aus <i>Google Books</i> zitierst.
 				</div>
 			</div>
 			<div>
@@ -97,16 +98,16 @@
 			</div>
 		</div>
 		
-		<hr />
+		<hr class="large" />
 		
 		<h2>Page Maker</h2>
 		<p>Zusätzlich gibt es noch den <b>Page Maker</b>, ein online verfügbares Helferlein, das Dir hilft, schnell, einfach und übersichtlich neue Einträge für das Wörterbuch zu erstellen. <a href="page-maker">Probiere ihn doch einmal aus!</a></p>
 		
-		<hr />
+		<hr class="large" />
 		
 		<h2>Wer steckt dahinter?</h2>
-		<p><span class="brand"><span>W</span><span>adget</span></span> wurde von mir, <a href="https://de.wiktionary.org/wiki/Spezial:Beitr%C3%A4ge/Latisc" target="_blank">Latisc</a>, einem Benutzer des deutschsprachigen Wiktionarys, konzipiert, erstellt, entwickelt und designt. Über weitere Ideen und Rückmeldungen würde ich mich natürlich freuen.</p>
-		<p>Diese Seite wird über <a href="https://github.com/AldoThaler/wadget" target="_blank">GitHub Pages</a> gehostet. <span class="brand"><span>W</span><span>adget</span></span> ist unter der <a href="https://www.gnu.org/licenses/gpl-3.0.de" target="_blank">GNU General Public License v3.0</a> verfügbar.</p>
+		<p><span class="brand"><span>W</span><span>adget</span></span> wurde von mir, <a href="https://de.wiktionary.org/wiki/Spezial:Beitr%C3%A4ge/Latisc" target="_blank" title="Link wird in einem neuen Tab geöffnet">Latisc</a>, einem Benutzer des deutschsprachigen Wiktionarys, konzipiert, erstellt, entwickelt und designt. Über weitere Ideen und Rückmeldungen würde ich mich natürlich freuen.</p>
+		<p>Diese Seite wird über <a href="https://github.com/AldoThaler/wadget" target="_blank" title="Link wird in einem neuen Tab geöffnet">GitHub Pages</a> gehostet. <span class="brand"><span>W</span><span>adget</span></span> ist unter der <a href="https://www.gnu.org/licenses/gpl-3.0.de" target="_blank" title="Link wird in einem neuen Tab geöffnet">GNU General Public License v3.0</a> verfügbar.</p>
 	</div>
 	<script src="js/general.js"></script>
 </body>
