--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="img/download.svg" height="20" /><span>Download</span>
 			</button>
 		</a>
-		<p class="button-label">Letztes Update: 14.07.2020, 12:21</p>
+		<p class="button-label">Letztes Update: 23.07.2020, 17:46</p>
 		
 		<hr class="large" />
 		
@@ -100,8 +100,9 @@
 		
 		<hr class="large" />
 		
-		<h2>Page Maker</h2>
-		<p>Zusätzlich gibt es noch den <b>Page Maker</b>, ein online verfügbares Helferlein, das Dir hilft, schnell, einfach und übersichtlich neue Einträge für das Wörterbuch zu erstellen. <a href="page-maker">Probiere ihn doch einmal aus!</a></p>
+		<h2>Sonstiges</h2>
+		<p class="bullet"><b><a href="web">Wadget Web</a></b> — Eine Online-Version des Helferleins für Tablet- und Smartphone-Nutzer</span></p>
+		<p class="bullet"><b><a href="maker">Wadget Maker</a></b> — Ein simples Tool, das bei der Erstellung neuer Einträge nützlich sein kann</p>
 		
 		<hr class="large" />
 		
