--- a/maker.html
+++ b/maker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Maker · Wadget</title>
+	<title>Wadget Maker</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -12,15 +12,14 @@
 		<div>
 			<img src="img/close.svg" id="dialog-close" class="close" />
 			<div>
-				<h2 class="small">Zack, fertig!</h2>
-				<p>Vergiss bitte nicht, den generierten Eintrag vor der Veröffentlichung noch einmal sorgfältig zu überprüfen und gegebenenfalls zu ergänzen!</p>
+				<h2>Bitte sehr!</h2>
 				<textarea id="output" class="large"></textarea>
-				<a id="copy" class="small"><img src="img/clipboard.svg" height="18" />Kopieren</a>
+				<a id="copy" class="small" title="In die Zwischenablage kopieren"><img src="img/clipboard.svg" height="18" />Kopieren</a>
 			</div>
 		</div>
 	</div>
 	<div id="wrapper">
-		<div id="header"><a href="/wadget/"><span>W</span><span>adget</span><span>Page Maker</span></a></div>
+		<div id="header"><a href="/wadget/"><span>W</span><span>adget</span><span>Maker</span></a></div>
 		<div class="form">
 			<div class="section">
 				<span>Wort</span>
@@ -51,7 +50,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Bindestriche, Kommas und Punkte werden automatisch in das entsprechende Trennungs&shy;zeichen (·) umgewandelt.
+							Bindestriche werden automatisch in das entsprechende Trennungs&shy;zeichen (·) umgewandelt. Zusätz&shy;liche Wort&shy;trennungen (z.&nbsp;B. für mehrere Plural&shy;formen) werden durch Kommas oder Semi&shy;kolons getrennt.
 						</div>
 					</div>
 				</span>
@@ -110,7 +109,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Alternative Aussprache&shy;varianten werden durch Kommas oder Semikolons getrennt.
+							Alternative Aussprache&shy;varianten werden durch Kommas oder Semi&shy;kolons getrennt.
 						</div>
 					</div>
 				</span>
@@ -120,9 +119,9 @@
 						<a class="fix">ˈ</a><a class="fix">ˌ</a><a class="fix">ː</a><!--
 						--><a>ʔ</a><a>ɡ</a><a>t͡s</a><a>t͡ʃ</a><a>d͡z</a><a>d͡ʒ</a><a>p͡f</a><!--
 						--><a>θ</a><a>ʃ</a><a>ç</a><a>z̥</a><a>ʒ</a><a>ʁ</a><a>m̩</a><a>n̩</a><!--
-						--><a>ŋ̍</a><a>l̩</a><a>i̯</a><a>ɪ</a><a>ɪ̯</a><a>ʏ</a><a>u̯</a><a>ʊ</a><!--
-						--><a>ʊ̯</a><a>ø</a><a>o̯</a><a>ɛ</a><a>œ</a><a>œ̃</a><a>ə</a><a>ɔ</a><!--
-						--><a>ɔ̃</a><a>ɐ</a><a>ɐ̯</a><a>ɑ̃</a>
+						--><a>ŋ</a><a>ŋ̍</a><a>l̩</a><a>i̯</a><a>ɪ</a><a>ɪ̯</a><a>ʏ</a><a>u̯</a><!--
+						--><a>ʊ</a><a>ʊ̯</a><a>ø</a><a>o̯</a><a>ɛ</a><a>œ</a><a>œ̃</a><a>ə</a><!--
+						--><a>ɔ</a><a>ɔ̃</a><a>ɐ</a><a>ɐ̯</a><a>ɑ̃</a>
 					</div>
 				</div>
 			</div>
@@ -151,7 +150,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Zusätzliche Formen werden durch Kommas bzw. Semikolons getrennt. Mit Komma separierte Formen werden mit Sternchen (*) versehen, mit Semikolon separierte Formen werden nummeriert.
+							Zusätzliche Formen werden durch Kommas bzw. Semi&shy;kolons getrennt. Mit Komma separierte Formen werden mit Stern&shy;chen (*) versehen, mit Semi&shy;kolon separierte Formen werden nummeriert.
 						</div>
 					</div>
 				</span>
@@ -192,7 +191,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Zusätzliche Formen werden durch Kommas oder Semikolons getrennt.
+							Zusätzliche Formen werden durch Kommas oder Semi&shy;kolons getrennt.
 						</div>
 					</div>
 				</span>
@@ -236,7 +235,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Zusätzliche Formen werden durch Kommas oder Semikolons getrennt.
+							Zusätzliche Formen werden durch Kommas oder Semi&shy;kolons getrennt.
 						</div>
 					</div>
 				</span>
@@ -275,12 +274,6 @@
 				</div>
 			</div>
 			<div class="section">
-				<span>Synonyme</span>
-				<div>
-					<textarea id="synonyms">:[1] </textarea>
-				</div>
-			</div>
-			<div class="section">
 				<span>Beispiele</span>
 				<div>
 					<textarea id="examples" class="large">:[1] </textarea>
@@ -299,7 +292,8 @@
 :[*] {{Ref-OWID}}
 :[*] {{Ref-UniLeipzig}} (Korpusbelege)
 :[1] {{Ref-FreeDictionary}}
-:[1] {{Ref-Duden}}</textarea>
+:[1] {{Ref-Duden}}
+:[*] {{Ref-PONS}}</textarea>
 					<a href="#" target="_blank" id="view-refs" class="ref small" title="Referenz-Links testen">
 						<img src="img/link.svg" height="15" />Alle Links öffnen
 					</a>
@@ -307,9 +301,9 @@
 			</div>
 		</div>
 		<hr />
-		<button type="button" id="generate"><img src="img/go.svg" height="10" /><span>Eintrag generieren</span></button>
+		<button type="button" id="go"><img src="img/go.svg" height="10" /><span>Eintrag erstellen</span></button>
 	</div>
+	<script src="js/maker.js"></script>
 	<script src="js/general.js"></script>
-	<script src="js/page-maker.js"></script>
 </body>
 </html>
