--- a/maker.html
+++ b/maker.html
@@ -50,7 +50,7 @@
 					<div class="tooltip">
 						<a>✱</a>
 						<div>
-							Bindestriche werden automatisch in das entsprechende Trennungs&shy;zeichen (·) umgewandelt. Zusätz&shy;liche Wort&shy;trennungen (z.&nbsp;B. für mehrere Plural&shy;formen) werden durch Kommas oder Semi&shy;kolons getrennt.
+							Punkte werden automatisch in das entsprechende Trennungs&shy;zeichen (·) umgewandelt. Zusätz&shy;liche Wort&shy;trennungen (z.&nbsp;B. für mehrere Plural&shy;formen) werden durch Kommas oder Semi&shy;kolons getrennt.
 						</div>
 					</div>
 				</span>
@@ -294,9 +294,37 @@
 :[1] {{Ref-FreeDictionary}}
 :[1] {{Ref-Duden}}
 :[*] {{Ref-PONS}}</textarea>
-					<a href="#" target="_blank" id="view-refs" class="ref small" title="Referenz-Links testen">
-						<img src="img/link.svg" height="15" />Alle Links öffnen
-					</a>
+				</div>
+			</div>
+			<div class="section">
+				<span></span>
+				<div>
+					<div id="ref-links">
+						<a id="ref-wp" class="small">
+							<img src="img/link.svg" height="15" />Wikipedia
+						</a>
+						<a id="ref-wps" class="small">
+							<img src="img/link.svg" height="15" />Wikipedia-Suche
+						</a>
+						<a id="ref-dwds" class="small">
+							<img src="img/link.svg" height="15" />DWDS
+						</a>
+						<a id="ref-owid" class="small">
+							<img src="img/link.svg" height="15" />OWID
+						</a>
+						<a id="ref-ul" class="small">
+							<img src="img/link.svg" height="15" />UniLeipzig
+						</a>
+						<a id="ref-fd" class="small">
+							<img src="img/link.svg" height="15" />FreeDictionary
+						</a>
+						<a id="ref-duden" class="small">
+							<img src="img/link.svg" height="15" />Duden
+						</a>
+						<a id="ref-pons" class="small">
+							<img src="img/link.svg" height="15" />PONS
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
