--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="img/download.svg" height="20" /><span>Download</span>
 			</button>
 		</a>
-		<p class="button-label">Letztes Update: 04.08.2020, 18:09</p>
+		<p class="button-label">Letztes Update: 07.08.2020, 10:07</p>
 		
 		<hr class="large" />
 		
@@ -81,7 +81,7 @@
 			<div>
 				<div>1</div>
 				<div>
-					Rufe jetzt einen beliebigen <b>Online-Zeitungsartikel</b> (z.&nbsp;B. <i>Tagesspiegel</i>) auf und <b>markiere</b> den Satz, den Du als Beispielsatz zitieren möchtest. Du kannst auch aus einem <b>Buch</b> bei <i>Google Books</i> zitieren.
+					Rufe jetzt einen beliebigen <b>Online-Zeitungsartikel</b> (z.&nbsp;B. <i>Tagesspiegel</i>) auf und <b>markiere</b> den Satz, den Du als Beispiel zitieren möchtest. Du kannst auch aus einem <b>Buch</b> bei <i>Google Books</i> zitieren.
 				</div>
 			</div>
 			<div>
