--- a/maker.html
+++ b/maker.html
@@ -133,7 +133,7 @@
 				<span>Genus</span>
 				<div>
 					<div class="check inline">
-						<input type="checkbox" name="gender" id="gender-m" value="m" checked />
+						<input type="checkbox" name="gender" id="gender-m" value="m" />
 						<div>männlich</div>
 					</div><div class="check inline">
 						<input type="checkbox" name="gender" id="gender-f" value="f" />
@@ -270,7 +270,7 @@
 			<div class="section">
 				<span>Herkunft</span>
 				<div>
-					<textarea id="etymology">:[[Determinativkompositum]] aus ''[[xxx]]'' und ''[[xxx]]''</textarea>
+					<textarea id="etymology">:[[Determinativkompositum]] aus den Substantiven ''[[xxx]]'' und ''[[xxx]]'' sowie dem [[Fugenelement]] ''[[-xxx]]''</textarea>
 				</div>
 			</div>
 			<div class="section">
@@ -300,28 +300,31 @@
 				<span></span>
 				<div>
 					<div id="ref-links">
-						<a id="ref-wp" class="small">
+						<a id="ref-open-all" class="small" title="Alle Links öffnen">
+							<img src="img/link.svg" height="15" />Alle öffnen
+						</a>
+						<a href="#" target="_blank" id="ref-wp" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />Wikipedia
 						</a>
-						<a id="ref-wps" class="small">
+						<a href="#" target="_blank" id="ref-wps" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />Wikipedia-Suche
 						</a>
-						<a id="ref-dwds" class="small">
+						<a href="#" target="_blank" id="ref-dwds" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />DWDS
 						</a>
-						<a id="ref-owid" class="small">
+						<a href="#" target="_blank" id="ref-owid" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />OWID
 						</a>
-						<a id="ref-ul" class="small">
+						<a href="#" target="_blank" id="ref-ul" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />UniLeipzig
 						</a>
-						<a id="ref-fd" class="small">
+						<a href="#" target="_blank" id="ref-fd" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />FreeDictionary
 						</a>
-						<a id="ref-duden" class="small">
+						<a href="#" target="_blank" id="ref-duden" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />Duden
 						</a>
-						<a id="ref-pons" class="small">
+						<a href="#" target="_blank" id="ref-pons" class="small" title="Link öffnen">
 							<img src="img/link.svg" height="15" />PONS
 						</a>
 					</div>
