--- a/maker.html
+++ b/maker.html
@@ -37,6 +37,9 @@
 					</div><div class="radio inline">
 						<input type="radio" name="type" id="type-adj" value="adj" />
 						<div>Adjektiv</div>
+					</div><div class="radio inline">
+						<input type="radio" name="type" id="type-adv" value="adv" />
+						<div>Adverb</div>
 					</div>
 				</div>
 			</div>
@@ -99,6 +102,11 @@
 							<div class="section">
 								<input type="text" id="hyph-sup" class="hyph" placeholder="Superlativ" />
 							</div>
+						</div>
+					</div>
+					<div id="hyph-adv" class="hidden">
+						<div class="section">
+							<input type="text" id="hyph-adv-lemma" class="hyph" />
 						</div>
 					</div>
 				</div>
@@ -270,7 +278,15 @@
 			<div class="section">
 				<span>Herkunft</span>
 				<div>
-					<textarea id="etymology">:[[Determinativkompositum]] aus den Substantiven ''[[xxx]]'' und ''[[xxx]]'' sowie dem [[Fugenelement]] ''[[-xxx]]''</textarea>
+					<textarea id="etymology">:[[Determinativkompositum]] aus den Substantiven ''[[xxx]]'' und ''[[xxx]]'' sowie dem [[Fugenelement]] ''[[-xxx]]''
+
+:[[Ableitung]] des Adjektivs ''[[xxx]]'' zum Substantiv mit dem [[Derivatem]] ([[Ableitungsmorphem]]) ''[[-xxx]]''</textarea>
+				</div>
+			</div>
+			<div class="section">
+				<span>Synonyme</span>
+				<div>
+					<textarea id="synonyms">:[1] </textarea>
 				</div>
 			</div>
 			<div class="section">
